# goalify

./: package-lock.json  package.json
anchor-program/: Anchor.toml  Cargo.toml  README.md
anchor-program/programs/anchor-program/src/: lib.rs
anchor-program/programs/goal_manager/: Cargo.toml
anchor-program/programs/goal_manager/src/: errors.rs  lib.rs  state.rs
anchor-program/programs/goal_manager/src/instructions/: claim.rs  create_goal.rs  create_goal.ts  distribute_rewards.rs  finalize_goal.rs  initalize_platform.rs  join_goal.rs  mod.rs  submit_proof.rs  sweep_treasury.rs  update_goal_status.rs  verify_participant.rs
anchor-program/programs/reward-token/: Cargo.toml
anchor-program/programs/reward-token/src/: errors.rs  lib.rs  state.rs
anchor-program/programs/stake_vault/: Cargo.toml
anchor-program/programs/stake_vault/src/: errors.rs  (+2 more)
anchor-program/programs/verification_program/: Cargo.toml
anchor-program/tests/: goal_manager.ts
goalifier/: Anchor.toml
goalifier/programs/goalifier/: Cargo.toml
goalifier/tests/: goalifier.js
goalstaker/: next.config.ts  package-lock.json  package.json
goalstaker/src/app/: fonts.ts  layout.tsx
programs/goalify/: Anchor.toml
src/app/: fonts.ts  layout.tsx  page.tsx
src/app/(home)/: layout.tsx
src/components/goal-groups/: createGoal.tsx
src/components/landing/: Features.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Navbar.tsx  Rewards.tsx
src/components/ui/: Appbar.tsx  ConnectWallet.tsx  WalletConnectionProvider.tsx  datePicker.tsx  sidebar.tsx
src/lib/: pinata.ts
src/types/: models.ts
(+56 files in other folders)
